@@ -532,7 +532,7 @@ static int des_ecb_encrypt(des_cblock *input, des_cblock *output,
 
 
      
-static inline void block_decrypt(block_state *state, 
+static void block_decrypt(block_state *state, 
 				 unsigned char *block)
 {
   des_cblock output;
@@ -541,7 +541,7 @@ static inline void block_decrypt(block_state *state,
   memcpy(block, output, 8);
 }
 
-static inline void block_encrypt(block_state *state, unsigned char *block)
+static void block_encrypt(block_state *state, unsigned char *block)
 {
   des_cblock output;
 
@@ -652,7 +652,7 @@ static const unsigned char odd_parity[256]={
 224,224,227,227,229,229,230,230,233,233,234,234,236,236,239,239,
 241,241,242,242,244,244,247,247,248,248,251,251,253,253,254,254};
 
-static inline void block_init(block_state *state, unsigned char *key,
+static void block_init(block_state *state, unsigned char *key,
 			      int keylen)
 {
   char oddkey[8];
